# client-app

./: .gitignore  .prettierignore  CLAUDE.md  README.md  SPEC.md  dev-app-update.yml  eslint.config.js  index.html  nodemon.hide.json  nodemon.show.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.app.json  tsconfig.electron.json  tsconfig.json  vite.config.ts
.github/: release_notes_template.md
.github/scripts/: generate-latest-json.mjs
.github/workflows/: manual-cross-platform-release.yml  release.yml
agents/asr/: asr_agent.py  audio_capture.py  audio_device_service.py  main.py  websocket_client.py
app/: package-lock.json  package.json
public/: logo_macos.icns
scripts/: build_all.py  build_asr_agent.py
src/: index.css  main.tsx  router.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: consts.rs  lib.rs  main.rs
src-tauri/src/commands/: app_state.rs  auth.rs  config.rs  external.rs  llm.rs  mod.rs  payment.rs  permissions.rs  suggestion.rs  tools.rs  transcription.rs  updater.rs  window_cmd.rs
src-tauri/src/services/: action_lock.rs  action_suggestion.rs  api_client.rs  app_state.rs  auth.rs  health_check.rs  live_suggestion.rs  mod.rs  payment.rs  push_notification.rs  tools.rs  transcript.rs  window_control.rs  zoom.rs
src-tauri/src/store/: config_store.rs
src-tauri/src/types/: app_state.rs  auth.rs  config.rs  llm.rs  mod.rs  payment.rs  push_notification.rs
src-tauri/src/utils/: mod.rs
(+254 files in other folders)
