[package]
name = "power-interview-ai"
version = "1.5.2"
description = "AI-powered live interview assistant"
authors = ["Power Interview AI"]
edition = "2021"

[lib]
name = "power_interview_ai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.11.0", features = [] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-updater = "2"
cpal = "0.15"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
xcap = "0.0"
image = { version = "0.25", default-features = false, features = ["png"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
parking_lot = "0.12"
anyhow = "1"
log = "0.4"
futures-util = "0.3"
base64 = "0.22"
once_cell = "1"
raw-window-handle = "0.6"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-app-kit = { version = "0.2", features = ["NSWindow", "NSButton"] }

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
